hax_arsc_lib_jar = jar('hax_arsc_lib', [
                                             	'com/android/org/kxml2/io/KXmlSerializer.java',
                                             	'com/android/org/kxml2/io/LibCoreStringPool.java',
                                             	'com/android/org/kxml2/io/KXmlParser.java',
                                             	'com/reandroid/common/EntryStore.java',
                                             	'com/reandroid/common/FileChannelInputStream.java',
                                             	'com/reandroid/common/TableEntryStore.java',
                                             	'com/reandroid/common/ReferenceResolver.java',
                                             	'com/reandroid/common/Frameworks.java',
                                             	'com/reandroid/apk/APKLogger.java',
                                             	'com/reandroid/apk/ApkModuleXmlEncoder.java',
                                             	'com/reandroid/apk/FrameworkApk.java',
                                             	'com/reandroid/apk/JsonManifestInputSource.java',
                                             	'com/reandroid/apk/ApkJsonDecoder.java',
                                             	'com/reandroid/apk/ApkUtil.java',
                                             	'com/reandroid/apk/BlockInputSource.java',
                                             	'com/reandroid/apk/FrameworkOptimizer.java',
                                             	'com/reandroid/apk/PathSanitizer.java',
                                             	'com/reandroid/apk/UncompressedFiles.java',
                                             	'com/reandroid/apk/XmlHelper.java',
                                             	'com/reandroid/apk/ResFile.java',
                                             	'com/reandroid/apk/TableBlockJsonBuilder.java',
                                             	'com/reandroid/apk/StringPoolBuilder.java',
                                             	'com/reandroid/apk/CrcOutputStream.java',
                                             	'com/reandroid/apk/RenamedInputSource.java',
                                             	'com/reandroid/apk/PathMap.java',
                                             	'com/reandroid/apk/ApkJsonEncoder.java',
                                             	'com/reandroid/apk/ApkModuleXmlDecoder.java',
                                             	'com/reandroid/apk/SplitJsonTableInputSource.java',
                                             	'com/reandroid/apk/AndroidFrameworks.java',
                                             	'com/reandroid/apk/ApkDecoder.java',
                                             	'com/reandroid/apk/ResourceIds.java',
                                             	'com/reandroid/apk/JsonXmlInputSource.java',
                                             	'com/reandroid/apk/ApkBundle.java',
                                             	'com/reandroid/apk/TableBlockJson.java',
                                             	'com/reandroid/apk/SingleJsonTableInputSource.java',
                                             	'com/reandroid/apk/DexFileInputSource.java',
                                             	'com/reandroid/apk/ApkModule.java',
                                             	'com/reandroid/apk/FileMagic.java',
                                             	'com/reandroid/apk/xmlencoder/XMLEncodeSource.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderBag.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoder.java',
                                             	'com/reandroid/apk/xmlencoder/XMLFileEncoder.java',
                                             	'com/reandroid/apk/xmlencoder/EncodeUtil.java',
                                             	'com/reandroid/apk/xmlencoder/EncodeException.java',
                                             	'com/reandroid/apk/xmlencoder/EncodeMaterials.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderColor.java',
                                             	'com/reandroid/apk/xmlencoder/ValuesEncoder.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderInteger.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderStyle.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderDimen.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderAttr.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderString.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderPlurals.java',
                                             	'com/reandroid/apk/xmlencoder/ValuesStringPoolBuilder.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderArray.java',
                                             	'com/reandroid/apk/xmlencoder/RESEncoder.java',
                                             	'com/reandroid/apk/xmlencoder/FilePathEncoder.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderId.java',
                                             	'com/reandroid/apk/xmlencoder/XMLValuesEncoderCommon.java',
                                             	'com/reandroid/apk/xmldecoder/XMLEntryDecoder.java',
                                             	'com/reandroid/apk/xmldecoder/BagDecoder.java',
                                             	'com/reandroid/apk/xmldecoder/BagDecoderAttr.java',
                                             	'com/reandroid/apk/xmldecoder/EntryWriter.java',
                                             	'com/reandroid/apk/xmldecoder/XMLEntryDecoderSerializer.java',
                                             	'com/reandroid/apk/xmldecoder/EntryWriterElement.java',
                                             	'com/reandroid/apk/xmldecoder/ResXmlDocumentSerializer.java',
                                             	'com/reandroid/apk/xmldecoder/DecoderTableEntry.java',
                                             	'com/reandroid/apk/xmldecoder/XMLDecodeHelper.java',
                                             	'com/reandroid/apk/xmldecoder/DecoderResTableEntry.java',
                                             	'com/reandroid/apk/xmldecoder/BagDecoderArray.java',
                                             	'com/reandroid/apk/xmldecoder/DecoderResTableEntryMap.java',
                                             	'com/reandroid/apk/xmldecoder/BagDecoderPlural.java',
                                             	'com/reandroid/apk/xmldecoder/XMLEntryDecoderDocument.java',
                                             	'com/reandroid/apk/xmldecoder/XMLNamespaceValidator.java',
                                             	'com/reandroid/apk/xmldecoder/BagDecoderCommon.java',
                                             	'com/reandroid/apk/xmldecoder/EntryWriterSerializer.java',
                                             	'com/reandroid/apk/xmldecoder/XMLBagDecoder.java',
                                             	'com/reandroid/arsc/item/SpecFlagsArray.java',
                                             	'com/reandroid/arsc/item/StyleItem.java',
                                             	'com/reandroid/arsc/item/BlockItem.java',
                                             	'com/reandroid/arsc/item/ShortItem.java',
                                             	'com/reandroid/arsc/item/ReferenceItem.java',
                                             	'com/reandroid/arsc/item/ResXmlString.java',
                                             	'com/reandroid/arsc/item/ReferenceBlock.java',
                                             	'com/reandroid/arsc/item/IntegerArray.java',
                                             	'com/reandroid/arsc/item/ByteItem.java',
                                             	'com/reandroid/arsc/item/StyleItemReference.java',
                                             	'com/reandroid/arsc/item/TypeString.java',
                                             	'com/reandroid/arsc/item/LongItem.java',
                                             	'com/reandroid/arsc/item/SpecString.java',
                                             	'com/reandroid/arsc/item/TableString.java',
                                             	'com/reandroid/arsc/item/FixedLengthString.java',
                                             	'com/reandroid/arsc/item/ByteArray.java',
                                             	'com/reandroid/arsc/item/SpecFlag.java',
                                             	'com/reandroid/arsc/item/IntegerItem.java',
                                             	'com/reandroid/arsc/item/ResXmlID.java',
                                             	'com/reandroid/arsc/item/StringItem.java',
                                             	'com/reandroid/arsc/item/IndirectItem.java',
                                             	'com/reandroid/arsc/header/TableHeader.java',
                                             	'com/reandroid/arsc/header/OverlayableHeader.java',
                                             	'com/reandroid/arsc/header/OverlayablePolicyHeader.java',
                                             	'com/reandroid/arsc/header/StringPoolHeader.java',
                                             	'com/reandroid/arsc/header/InfoHeader.java',
                                             	'com/reandroid/arsc/header/HeaderBlock.java',
                                             	'com/reandroid/arsc/header/PackageHeader.java',
                                             	'com/reandroid/arsc/header/XmlNodeHeader.java',
                                             	'com/reandroid/arsc/header/StagedAliasHeader.java',
                                             	'com/reandroid/arsc/header/LibraryHeader.java',
                                             	'com/reandroid/arsc/header/TypeHeader.java',
                                             	'com/reandroid/arsc/header/SpecHeader.java',
                                             	'com/reandroid/arsc/container/BlockList.java',
                                             	'com/reandroid/arsc/container/ResValueContainer.java',
                                             	'com/reandroid/arsc/container/PackageBody.java',
                                             	'com/reandroid/arsc/container/SpecTypePair.java',
                                             	'com/reandroid/arsc/container/FixedBlockContainer.java',
                                             	'com/reandroid/arsc/container/SingleBlockContainer.java',
                                             	'com/reandroid/arsc/container/ExpandableBlockContainer.java',
                                             	'com/reandroid/arsc/base/BlockArray.java',
                                             	'com/reandroid/arsc/base/Block.java',
                                             	'com/reandroid/arsc/base/BlockCounter.java',
                                             	'com/reandroid/arsc/base/BlockCreator.java',
                                             	'com/reandroid/arsc/base/BlockArrayCreator.java',
                                             	'com/reandroid/arsc/base/BlockContainer.java',
                                             	'com/reandroid/arsc/BuildInfo.java',
                                             	'com/reandroid/arsc/list/OverlayableList.java',
                                             	'com/reandroid/arsc/list/StagedAliasList.java',
                                             	'com/reandroid/arsc/decoder/ComplexUtil.java',
                                             	'com/reandroid/arsc/decoder/Decoder.java',
                                             	'com/reandroid/arsc/decoder/ColorUtil.java',
                                             	'com/reandroid/arsc/decoder/ValueDecoder.java',
                                             	'com/reandroid/arsc/decoder/ThreeByteCharsetDecoder.java',
                                             	'com/reandroid/arsc/io/BlockLoad.java',
                                             	'com/reandroid/arsc/io/BlockReader.java',
                                             	'com/reandroid/arsc/pool/ResXmlStringPool.java',
                                             	'com/reandroid/arsc/pool/builder/StringPoolMerger.java',
                                             	'com/reandroid/arsc/pool/builder/StyleBuilder.java',
                                             	'com/reandroid/arsc/pool/StringPool.java',
                                             	'com/reandroid/arsc/pool/SpecStringPool.java',
                                             	'com/reandroid/arsc/pool/TypeStringPool.java',
                                             	'com/reandroid/arsc/pool/TableStringPool.java',
                                             	'com/reandroid/arsc/pool/JsonStringPoolHelper.java',
                                             	'com/reandroid/arsc/chunk/LibraryBlock.java',
                                             	'com/reandroid/arsc/chunk/TableBlock.java',
                                             	'com/reandroid/arsc/chunk/UnknownChunk.java',
                                             	'com/reandroid/arsc/chunk/MainChunk.java',
                                             	'com/reandroid/arsc/chunk/TypeBlock.java',
                                             	'com/reandroid/arsc/chunk/ChunkType.java',
                                             	'com/reandroid/arsc/chunk/PackageBlock.java',
                                             	'com/reandroid/arsc/chunk/xml/ResIdBuilder.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlNode.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlPullParser.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlText.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlIDMap.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlAttribute.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlEndElement.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlElement.java',
                                             	'com/reandroid/arsc/chunk/xml/BaseXmlChunk.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlDocument.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlStartNamespace.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlStartElement.java',
                                             	'com/reandroid/arsc/chunk/xml/ParserEventList.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlTextNode.java',
                                             	'com/reandroid/arsc/chunk/xml/ParserEvent.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlNamespace.java',
                                             	'com/reandroid/arsc/chunk/xml/AndroidManifestBlock.java',
                                             	'com/reandroid/arsc/chunk/xml/ResXmlEndNamespace.java',
                                             	'com/reandroid/arsc/chunk/SpecBlock.java',
                                             	'com/reandroid/arsc/chunk/StagedAlias.java',
                                             	'com/reandroid/arsc/chunk/ParentChunk.java',
                                             	'com/reandroid/arsc/chunk/Overlayable.java',
                                             	'com/reandroid/arsc/chunk/OverlayablePolicy.java',
                                             	'com/reandroid/arsc/chunk/Chunk.java',
                                             	'com/reandroid/arsc/ApkFile.java',
                                             	'com/reandroid/arsc/array/EntryArray.java',
                                             	'com/reandroid/arsc/array/SparseOffsetsArray.java',
                                             	'com/reandroid/arsc/array/StyleArray.java',
                                             	'com/reandroid/arsc/array/SpecTypePairArray.java',
                                             	'com/reandroid/arsc/array/ResXmlIDArray.java',
                                             	'com/reandroid/arsc/array/ResXmlAttributeArray.java',
                                             	'com/reandroid/arsc/array/TypeBlockArray.java',
                                             	'com/reandroid/arsc/array/TypeStringArray.java',
                                             	'com/reandroid/arsc/array/SpecBlockArray.java',
                                             	'com/reandroid/arsc/array/ResValueMapArray.java',
                                             	'com/reandroid/arsc/array/StringArray.java',
                                             	'com/reandroid/arsc/array/StagedAliasEntryArray.java',
                                             	'com/reandroid/arsc/array/TableStringArray.java',
                                             	'com/reandroid/arsc/array/SpecStringArray.java',
                                             	'com/reandroid/arsc/array/OffsetArray.java',
                                             	'com/reandroid/arsc/array/LibraryInfoArray.java',
                                             	'com/reandroid/arsc/array/OffsetBlockArray.java',
                                             	'com/reandroid/arsc/array/CompoundItemArray.java',
                                             	'com/reandroid/arsc/array/ResXmlStringArray.java',
                                             	'com/reandroid/arsc/array/PackageArray.java',
                                             	'com/reandroid/arsc/model/StyleSpanInfo.java',
                                             	'com/reandroid/arsc/model/StyledStringBuilder.java',
                                             	'com/reandroid/arsc/value/AttributeType.java',
                                             	'com/reandroid/arsc/value/Entry.java',
                                             	'com/reandroid/arsc/value/StagedAliasEntry.java',
                                             	'com/reandroid/arsc/value/CompoundEntry.java',
                                             	'com/reandroid/arsc/value/ValueItem.java',
                                             	'com/reandroid/arsc/value/EntryHeader.java',
                                             	'com/reandroid/arsc/value/ResTableMapEntry.java',
                                             	'com/reandroid/arsc/value/ResTableEntry.java',
                                             	'com/reandroid/arsc/value/plurals/PluralsQuantity.java',
                                             	'com/reandroid/arsc/value/plurals/PluralsBag.java',
                                             	'com/reandroid/arsc/value/plurals/PluralsBagItem.java',
                                             	'com/reandroid/arsc/value/Value.java',
                                             	'com/reandroid/arsc/value/AttributeDataFormat.java',
                                             	'com/reandroid/arsc/value/ResValueMap.java',
                                             	'com/reandroid/arsc/value/ResConfig.java',
                                             	'com/reandroid/arsc/value/attribute/AttributeBagItem.java',
                                             	'com/reandroid/arsc/value/attribute/AttributeBag.java',
                                             	'com/reandroid/arsc/value/AttributeValue.java',
                                             	'com/reandroid/arsc/value/EntryHeaderMap.java',
                                             	'com/reandroid/arsc/value/style/StyleBag.java',
                                             	'com/reandroid/arsc/value/style/StyleBagItem.java',
                                             	'com/reandroid/arsc/value/ValueType.java',
                                             	'com/reandroid/arsc/value/TableEntry.java',
                                             	'com/reandroid/arsc/value/ValueHeader.java',
                                             	'com/reandroid/arsc/value/array/ArrayBagItem.java',
                                             	'com/reandroid/arsc/value/array/ArrayBag.java',
                                             	'com/reandroid/arsc/value/bag/BagItem.java',
                                             	'com/reandroid/arsc/value/bag/Bag.java',
                                             	'com/reandroid/arsc/value/bag/MapBag.java',
                                             	'com/reandroid/arsc/value/LibraryInfo.java',
                                             	'com/reandroid/arsc/value/ResValue.java',
                                             	'com/reandroid/arsc/util/FrameworkTable.java',
                                             	'com/reandroid/arsc/util/HexBytesWriter.java',
                                             	'com/reandroid/arsc/util/ResNameMap.java',
                                             	'com/reandroid/arsc/util/HexUtil.java',
                                             	'com/reandroid/arsc/group/EntryGroup.java',
                                             	'com/reandroid/arsc/group/StringGroup.java',
                                             	'com/reandroid/arsc/group/ItemGroup.java',
                                             	'com/reandroid/archive/ZipEntrySource.java',
                                             	'com/reandroid/archive/ByteInputSource.java',
                                             	'com/reandroid/archive/APKArchive.java',
                                             	'com/reandroid/archive/WriteInterceptor.java',
                                             	'com/reandroid/archive/FileInputSource.java',
                                             	'com/reandroid/archive/ZipAlign.java',
                                             	'com/reandroid/archive/InputSource.java',
                                             	'com/reandroid/archive/ZipSerializer.java',
                                             	'com/reandroid/archive/ZipArchive.java',
                                             	'com/reandroid/archive/WriteProgress.java',
                                             	'com/reandroid/archive/InputSourceUtil.java',
                                             	'com/reandroid/xml/XMLDocument.java',
                                             	'com/reandroid/xml/XMLElement.java',
                                             	'com/reandroid/xml/NameSpaceItem.java',
                                             	'com/reandroid/xml/XmlHeaderElement.java',
                                             	'com/reandroid/xml/source/XMLDocumentSource.java',
                                             	'com/reandroid/xml/source/XMLSource.java',
                                             	'com/reandroid/xml/source/XMLStringSource.java',
                                             	'com/reandroid/xml/source/XMLFileSource.java',
                                             	'com/reandroid/xml/XmlParserToSerializer.java',
                                             	'com/reandroid/xml/XMLNode.java',
                                             	'com/reandroid/xml/parser/MXParser.java',
                                             	'com/reandroid/xml/parser/XmlPullParser.java',
                                             	'com/reandroid/xml/parser/XMLParseException.java',
                                             	'com/reandroid/xml/parser/XmlPullParserException.java',
                                             	'com/reandroid/xml/parser/MXParserNonValidating.java',
                                             	'com/reandroid/xml/parser/XMLDocumentParser.java',
                                             	'com/reandroid/xml/parser/MXParserCachingStrings.java',
                                             	'com/reandroid/xml/parser/XMLSpanParser.java',
                                             	'com/reandroid/xml/XMLParserFactory.java',
                                             	'com/reandroid/xml/XMLSpannable.java',
                                             	'com/reandroid/xml/XMLComment.java',
                                             	'com/reandroid/xml/XMLUtil.java',
                                             	'com/reandroid/xml/XMLSpanInfo.java',
                                             	'com/reandroid/xml/ElementWriter.java',
                                             	'com/reandroid/xml/XMLAttribute.java',
                                             	'com/reandroid/xml/SchemaAttr.java',
                                             	'com/reandroid/xml/XMLException.java',
                                             	'com/reandroid/xml/XMLText.java',
                                             	'com/reandroid/archive2/io/CountingOutputStream.java',
                                             	'com/reandroid/archive2/io/ReadOnlyStream.java',
                                             	'com/reandroid/archive2/io/CountingInputStream.java',
                                             	'com/reandroid/archive2/io/SlicedInputStream.java',
                                             	'com/reandroid/archive2/io/FileChannelOutputStream.java',
                                             	'com/reandroid/archive2/io/ZipInput.java',
                                             	'com/reandroid/archive2/io/ArchiveUtil.java',
                                             	'com/reandroid/archive2/io/ZipFileInput.java',
                                             	'com/reandroid/archive2/io/ZipFileOutput.java',
                                             	'com/reandroid/archive2/io/ZipOutput.java',
                                             	'com/reandroid/archive2/io/RandomStream.java',
                                             	'com/reandroid/archive2/io/WriteOnlyStream.java',
                                             	'com/reandroid/archive2/io/ArchiveEntrySource.java',
                                             	'com/reandroid/archive2/ZipSignature.java',
                                             	'com/reandroid/archive2/ArchiveEntry.java',
                                             	'com/reandroid/archive2/block/CertificateBlock.java',
                                             	'com/reandroid/archive2/block/v3/SchemeV31.java',
                                             	'com/reandroid/archive2/block/v3/SchemeV3.java',
                                             	'com/reandroid/archive2/block/LengthPrefixedBlock.java',
                                             	'com/reandroid/archive2/block/LengthPrefixedBytes.java',
                                             	'com/reandroid/archive2/block/CertificateBlockList.java',
                                             	'com/reandroid/archive2/block/BottomBlock.java',
                                             	'com/reandroid/archive2/block/UnknownScheme.java',
                                             	'com/reandroid/archive2/block/DataDescriptor.java',
                                             	'com/reandroid/archive2/block/LocalFileHeader.java',
                                             	'com/reandroid/archive2/block/CentralEntryHeader.java',
                                             	'com/reandroid/archive2/block/ApkSignatureBlock.java',
                                             	'com/reandroid/archive2/block/ZipStringEncoding.java',
                                             	'com/reandroid/archive2/block/SignatureScheme.java',
                                             	'com/reandroid/archive2/block/LengthPrefixedList.java',
                                             	'com/reandroid/archive2/block/stamp/SchemeStampV2.java',
                                             	'com/reandroid/archive2/block/stamp/SchemeStampV1.java',
                                             	'com/reandroid/archive2/block/ZipHeader.java',
                                             	'com/reandroid/archive2/block/SignatureInfo.java',
                                             	'com/reandroid/archive2/block/ZipBlock.java',
                                             	'com/reandroid/archive2/block/EndRecord.java',
                                             	'com/reandroid/archive2/block/v2/SchemeV2.java',
                                             	'com/reandroid/archive2/block/v2/V2SignedDataList.java',
                                             	'com/reandroid/archive2/block/v2/V2Signer.java',
                                             	'com/reandroid/archive2/block/v2/V2Signature.java',
                                             	'com/reandroid/archive2/block/v2/V2SignedData.java',
                                             	'com/reandroid/archive2/block/SignatureId.java',
                                             	'com/reandroid/archive2/block/SignatureFooter.java',
                                             	'com/reandroid/archive2/block/CommonHeader.java',
                                             	'com/reandroid/archive2/block/pad/SchemePadding.java',
                                             	'com/reandroid/archive2/writer/RenamedArchiveSource.java',
                                             	'com/reandroid/archive2/writer/ArchiveOutputSource.java',
                                             	'com/reandroid/archive2/writer/BufferFileOutput.java',
                                             	'com/reandroid/archive2/writer/ZipAligner.java',
                                             	'com/reandroid/archive2/writer/ApkWriter.java',
                                             	'com/reandroid/archive2/writer/OutputSource.java',
                                             	'com/reandroid/archive2/writer/BufferFileInput.java',
                                             	'com/reandroid/archive2/writer/EntryBuffer.java',
                                             	'com/reandroid/archive2/model/CentralFileDirectory.java',
                                             	'com/reandroid/archive2/model/LocalFileDirectory.java',
                                             	'com/reandroid/archive2/Archive.java',
                                             	'com/reandroid/identifiers/PackageIdentifier.java',
                                             	'com/reandroid/identifiers/ResourceIdentifier.java',
                                             	'com/reandroid/identifiers/TypeIdentifier.java',
                                             	'com/reandroid/identifiers/IdentifierMap.java',
                                             	'com/reandroid/identifiers/Identifier.java',
                                             	'com/reandroid/identifiers/TableIdentifier.java',
                                             	'com/reandroid/json/JSONStringer.java',
                                             	'com/reandroid/json/JSONPointer.java',
                                             	'com/reandroid/json/JSONPropertyIgnore.java',
                                             	'com/reandroid/json/CookieList.java',
                                             	'com/reandroid/json/JsonUtil.java',
                                             	'com/reandroid/json/JSONWriter.java',
                                             	'com/reandroid/json/HTTP.java',
                                             	'com/reandroid/json/JSONML.java',
                                             	'com/reandroid/json/CDL.java',
                                             	'com/reandroid/json/XMLParserConfiguration.java',
                                             	'com/reandroid/json/XMLTokener.java',
                                             	'com/reandroid/json/HTTPTokener.java',
                                             	'com/reandroid/json/JSONString.java',
                                             	'com/reandroid/json/JSONTokener.java',
                                             	'com/reandroid/json/JSONException.java',
                                             	'com/reandroid/json/XMLXsiTypeConverter.java',
                                             	'com/reandroid/json/XML.java',
                                             	'com/reandroid/json/Cookie.java',
                                             	'com/reandroid/json/JSONItem.java',
                                             	'com/reandroid/json/Property.java',
                                             	'com/reandroid/json/JSONConvert.java',
                                             	'com/reandroid/json/JSONObject.java',
                                             	'com/reandroid/json/JSONPropertyName.java',
                                             	'com/reandroid/json/JSONArray.java',
                                             	'com/reandroid/json/JSONPointerException.java',
                                             	'android/content/res/XmlResourceParser.java',
                                             	'android/util/AttributeSet.java',
                                             	'org/xmlpull/v1/XmlPullParser.java',
                                             	'org/xmlpull/v1/XmlPullParserException.java',
                                             	'org/xmlpull/v1/XmlPullParserFactory.java',
                                             	'org/xmlpull/v1/XmlSerializer.java',
                                             ],
                                             java_args: [
                                             	'-bootclasspath', bootclasspath,
                                             	'-source', '1.8', '-target', '1.8'
                                             ])

