hax_jar = jar('hax', [
           	'com/google/android/gles_jni/GLImpl.java',
           	'com/google/android/gles_jni/EGLImpl.java',
           	'com/google/android/vending/licensing/LicenseCheckerCallback.java',
           	'com/google/android/vending/licensing/Policy.java',
           	'com/google/android/vending/licensing/LicenseChecker.java',
           	'com/android/internal/Manifest.java',
           	'com/android/internal/R.java',
           	'com/android/internal/util/ArrayUtils.java',
           	'com/android/internal/util/XmlUtils.java',
           	'com/android/internal/util/FastXmlSerializer.java',
           	'javax/microedition/khronos/egl/EGLConfig.java',
           	'javax/microedition/khronos/egl/EGL.java',
           	'javax/microedition/khronos/egl/EGLSurface.java',
           	'javax/microedition/khronos/egl/EGL10.java',
           	'javax/microedition/khronos/egl/EGLContext.java',
           	'javax/microedition/khronos/egl/EGLDisplay.java',
           	'javax/microedition/khronos/egl/EGL11.java',
           	'javax/microedition/khronos/opengles/GL10Ext.java',
           	'javax/microedition/khronos/opengles/GL11Ext.java',
           	'javax/microedition/khronos/opengles/GL11ExtensionPack.java',
           	'javax/microedition/khronos/opengles/GL.java',
           	'javax/microedition/khronos/opengles/GL10.java',
           	'javax/microedition/khronos/opengles/GL11.java',
           	'android/app/Activity.java',
           	'android/app/AlertDialog.java',
           	'android/app/ActivityManager.java',
           	'android/app/ProgressDialog.java',
           	'android/app/Dialog.java',
           	'android/app/Application.java',
           	'android/app/IntentService.java',
           	'android/app/Service.java',
           	'android/app/KeyguardManager.java',
           	'android/app/SharedPreferencesImpl.java',
           	'android/app/PendingIntent.java',
           	'android/net/Uri.java',
           	'android/net/NetworkInfo.java',
           	'android/net/ConnectivityManager.java',
           	'android/graphics/Region.java',
           	'android/graphics/BitmapFactory.java',
           	'android/graphics/RectF.java',
           	'android/graphics/Matrix.java',
           	'android/graphics/Bitmap.java',
           	'android/graphics/Rect.java',
           	'android/graphics/Typeface.java',
           	'android/graphics/Paint.java',
           	'android/graphics/Path.java',
           	'android/graphics/Canvas.java',
           	'android/annotation/PrivateApi.java',
           	'android/annotation/SuppressLint.java',
           	'android/annotation/SdkConstant.java',
           	'android/annotation/Widget.java',
           	'android/annotation/TargetApi.java',
           	'android/preference/PreferenceManager.java',
           	'android/os/MemoryFile.java',
           	'android/os/Parcelable.java',
           	'android/os/Environment.java',
           	'android/os/RemoteException.java',
           	'android/os/Binder.java',
           	'android/os/Handler.java',
           	'android/os/HandlerThread.java',
           	'android/os/Messenger.java',
           	'android/os/Process.java',
           	'android/os/ParcelFileDescriptor.java',
           	'android/os/Message.java',
           	'android/os/SystemClock.java',
           	'android/os/ResultReceiver.java',
           	'android/os/IMessenger.java',
           	'android/os/Trace.java',
           	'android/os/PatternMatcher.java',
           	'android/os/Looper.java',
           	'android/os/Bundle.java',
           	'android/os/Build.java',
           	'android/os/UserHandle.java',
           	'android/os/MessageQueue.java',
           	'android/os/AsyncTask.java',
           	'android/os/CancellationSignal.java',
           	'android/os/IBinder.java',
           	'android/Manifest.java',
           	'android/telephony/TelephonyManager.java',
           	'android/support/v4/app/FragmentActivity.java',
           	'android/R.java',
           	'android/opengl/EGLConfig.java',
           	'android/opengl/GLSurfaceView.java',
           	'android/opengl/EGLObjectHandle.java',
           	'android/widget/MediaController.java',
           	'android/widget/TextView.java',
           	'android/widget/ScrollView.java',
           	'android/widget/EditText.java',
           	'android/widget/ImageView.java',
           	'android/widget/LinearLayout.java',
           	'android/widget/ProgressBar.java',
           	'android/widget/FrameLayout.java',
           	'android/widget/RelativeLayout.java',
           	'android/database/Cursor.java',
           	'android/database/sqlite/SQLiteException.java',
           	'android/database/sqlite/SQLiteProgram.java',
           	'android/database/sqlite/DatabaseErrorHandler.java',
           	'android/database/sqlite/SQLiteOpenHelper.java',
           	'android/database/sqlite/SQLiteQuery.java',
           	'android/database/sqlite/SQLiteCursorDriver.java',
           	'android/database/sqlite/SQLiteCursor.java',
           	'android/database/sqlite/SQLiteDatabase.java',
           	'android/database/sqlite/SQLiteDirectCursorDriver.java',
           	'android/util/Log.java',
           	'android/util/ContainerHelpers.java',
           	'android/util/MapCollections.java',
           	'android/util/AndroidException.java',
           	'android/util/PrefixPrinter.java',
           	'android/util/Base64.java',
           	'android/util/TypedValue.java',
           	'android/util/DecompiledXmlResourceParser.java',
           	'android/util/Slog.java',
           	'android/util/SparseIntArray.java',
           	'android/util/XmlPullAttributes.java',
           	'android/util/Base64OutputStream.java',
           	'android/util/SparseArray.java',
           	'android/util/LongSparseArray.java',
           	'android/util/Xml.java',
           	'android/util/LayoutDirection.java',
           	'android/util/DisplayMetrics.java',
           	'android/util/ArrayMap.java',
           	'android/util/Printer.java',
           	'android/util/AndroidRuntimeException.java',
           	'android/util/StateSet.java',
           	'android/util/Base64InputStream.java',
           	'android/util/AttributeSet.java',
           	'android/util/Base64DataException.java',
           	'android/webkit/WebView.java',
           	'android/webkit/WebSettings.java',
           	'android/media/AudioTrack.java',
           	'android/media/MediaPlayer.java',
           	'android/media/AudioManager.java',
           	'android/media/SoundPool.java',
           	'android/location/LocationListener.java',
           	'android/location/Criteria.java',
           	'android/view/Menu.java',
           	'android/view/ViewParent.java',
           	'android/view/Surface.java',
           	'android/view/Window.java',
           	'android/view/ViewManager.java',
           	'android/view/WindowManager.java',
           	'android/view/ViewGroup.java',
           	'android/view/SurfaceHolder.java',
           	'android/view/InputDevice.java',
           	'android/view/InputEvent.java',
           	'android/view/View.java',
           	'android/view/LayoutInflater.java',
           	'android/view/ViewTreeObserver.java',
           	'android/view/MotionEvent.java',
           	'android/view/SurfaceView.java',
           	'android/view/WindowManagerImpl.java',
           	'android/view/Gravity.java',
           	'android/view/Display.java',
           	'android/hardware/SensorEventListener.java',
           	'android/hardware/Sensor.java',
           	'android/hardware/SensorManager.java',
            'android/hardware/usb/UsbManager.java',
           	'android/text/TextUtils.java',
           	'android/text/Spannable.java',
           	'android/text/ClipboardManager.java',
           	'android/text/Spanned.java',
           	'android/text/Html.java',
           	'android/text/TextPaint.java',
           	'android/text/util/Linkify.java',
           	'android/text/SpannableStringInternal.java',
           	'android/text/TextWatcher.java',
           	'android/text/SpannedString.java',
           	'android/text/GetChars.java',
           	'android/text/NoCopySpan.java',
           	'android/text/SpannableString.java',
           	'android/text/InputFilter.java',
           	'android/text/SpanWatcher.java',
           	'android/content/BroadcastReceiver.java',
           	'android/content/Context.java',
           	'android/content/ActivityNotFoundException.java',
           	'android/content/DialogInterface.java',
            'android/content/IntentFilter.java',
           	'android/content/OperationApplicationException.java',
           	'android/content/res/ColorStateList.java',
           	'android/content/res/XmlResourceParser.java',
           	'android/content/res/XmlBlock.java',
           	'android/content/res/AssetFileDescriptor.java',
           	'android/content/res/AssetManager.java',
           	'android/content/res/StringBlock.java',
           	'android/content/res/CompatibilityInfo.java',
           	'android/content/res/Configuration.java',
           	'android/content/res/Resources.java',
           	'android/content/res/TypedArray.java',
           	'android/content/Intent.java',
           	'android/content/ComponentName.java',
           	'android/content/pm/ConfigurationInfo.java',
           	'android/content/pm/ActivityInfo.java',
           	'android/content/pm/ServiceInfo.java',
           	'android/content/pm/VerifierInfo.java',
           	'android/content/pm/FeatureInfo.java',
           	'android/content/pm/PermissionGroupInfo.java',
           	'android/content/pm/ApplicationInfo.java',
           	'android/content/pm/PackageManager.java',
           	'android/content/pm/Signature.java',
           	'android/content/pm/PathPermission.java',
           	'android/content/pm/ProviderInfo.java',
           	'android/content/pm/PackageUserState.java',
           	'android/content/pm/InstrumentationInfo.java',
           	'android/content/pm/PackageInfo.java',
           	'android/content/pm/ManifestDigest.java',
           	'android/content/pm/PackageParser.java',
           	'android/content/pm/PermissionInfo.java',
           	'android/content/pm/ComponentInfo.java',
           	'android/content/pm/PackageItemInfo.java',
           	'android/content/IntentSender.java',
           	'android/content/SharedPreferences.java',
           	'android/content/ServiceConnection.java',
           	'android/content/ContentResolver.java',
           	'android/content/ContentValues.java',
           	'android/provider/Settings.java'
           ],
           dependencies: [
           	declare_dependency(link_with: hax_arsc_parser_jar)
           ],
           java_args: [
           	'-bootclasspath', join_paths(dir_base, 'jars/core-libart-hostdex_classes.jar'),
           	'-source', '1.7', '-target', '1.7',
           	'-h', join_paths(dir_base, 'src/api-impl-jni/generated_headers')
           ])
